--- a/BookSocialNetwork-api/pom.xml
+++ b/BookSocialNetwork-api/pom.xml
@@ -93,6 +93,12 @@
       <version>5.6.0</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+      <version>2.6.1</version>
+      <scope>compile</scope>
+    </dependency>
 
   </dependencies>
 </project>
